--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <text x="50%" y="50%" dy=".3em" fill="#dee2e6" >Replace Me!</text>
                 </svg>
             </figure> -->
-            <video width="720" height="400" controls>
+            <video width="720" height="400" muted loop onmouseover="playVid(this)" onmouseout="pauseVid(this)" controls>
                 <source id="video1" src="pexels-anna-nekrashevich-8055743.mp4"type="video/mp4">
             </video>
             <!-- video info -->
